<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativex"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_gravity="center">
    <com.scwang.wave.MultiWaveHeader
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/wave_header"
        ></com.scwang.wave.MultiWaveHeader>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginRight="25dp"
        app:cardCornerRadius="30dp"
        android:id="@+id/cardd"
        android:layout_centerInParent="true"
        android:layout_height="650dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/arriba"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:fontFamily="@font/passion_one_bold"
                android:layout_margin="10dp"
                android:id="@+id/texto"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="30dp"
                android:text="@string/adivina"
                />



            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:layout_marginTop="10dp"
                android:id="@+id/Animacion"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/pregunta"
                ></com.airbnb.lottie.LottieAnimationView>
        </LinearLayout>





        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginTop="270dp"
            android:layout_height="match_parent"

            android:layout_marginBottom="110dp"
            >
            <LinearLayout
                android:layout_width="match_parent"

                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textSize="25dp"
                    android:layout_width="match_parent"
                    android:text="@string/adivina2"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/passion_one_bold"
                    android:layout_marginTop="30dp"
                    android:id="@+id/msjResultado"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/colorverd"
                    android:textAlignment="center"



                    />
                <TextView
                    android:textSize="25dp"
                    android:layout_width="match_parent"
                    android:text="@string/adivina3"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/txtResultado3"
                    android:fontFamily="@font/quicksand_bold"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"



                    />
                <EditText
                    android:textSize="25dp"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:hint="0"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/et_num_maximo"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:maxLength="3"
                    android:layout_marginRight="65dp"
                    android:layout_marginLeft="65dp"
                    android:background="@drawable/back"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"



                    />

            </LinearLayout>


        </ScrollView>

        <Button
            android:id="@+id/btn_jugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/colorGreen1"
            android:onClick="jugar"
            android:textStyle="bold"
            android:background="@drawable/btn_redondo"
            android:text="@string/play"
            android:textColor="@android:color/white" />

    </androidx.cardview.widget.CardView>
    <com.scwang.wave.MultiWaveHeader
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:scaleY="-1"

        android:id="@+id/wave_header2"
        android:layout_alignParentBottom="true"
        ></com.scwang.wave.MultiWaveHeader>
</RelativeLayout>