<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/fonodo"
    android:layout_height="match_parent"
    >
    <com.scwang.wave.MultiWaveHeader
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/wave_header"
        ></com.scwang.wave.MultiWaveHeader>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginRight="25dp"
        app:cardCornerRadius="30dp"
        android:id="@+id/cardviews"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/arriba"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:id="@+id/texto"
                android:fontFamily="@font/passion_one_bold"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18dp"
                android:text="@string/intenta"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">



            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="200dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:layout_marginTop="50dp"
                android:id="@+id/Animacion"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/cubo"
                ></com.airbnb.lottie.LottieAnimationView>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent"
                >
                <EditText
                    android:id="@+id/et_num_usuario"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:background="@drawable/back"
                    android:ems="4"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:textSize="24dp"
                    />

                <Button
                    android:id="@+id/btn_comprobar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textSize="15dp"

                    android:textStyle="bold"
                    android:background="@drawable/btn_redondo"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="50dp"
                    android:textColor="@android:color/white"
                    android:onClick="comprobar"
                    android:text="@string/comprobar"
                    />

                <TextView
                    android:id="@+id/tv_intentos"
                    android:layout_width="53dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:background="@drawable/back"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    />

                <TextView
                    android:id="@+id/tv_tit"
                    android:layout_width="97dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/intentos"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <com.scwang.wave.MultiWaveHeader
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:scaleY="-1"

        android:id="@+id/wave_header2"
        android:layout_alignParentBottom="true"
        ></com.scwang.wave.MultiWaveHeader>
    <include
        layout="@layout/numerogame"
        ></include>

</RelativeLayout>