<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/mainMenu"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    >

    <com.scwang.wave.MultiWaveHeader
        android:layout_width="match_parent"
        android:layout_height="130dp"
        ads:mwhVelocity="5"

        android:id="@+id/wave_header"
        ></com.scwang.wave.MultiWaveHeader>


    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/passion_one_bold"
        android:text="MATHQUIZ"
        android:textColor="#fff"
        android:textSize="60sp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textStyle="bold"
        android:typeface="normal"
        />

<RelativeLayout
    android:layout_below="@+id/logo"
    android:id="@+id/linear"
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/anuncio"
        android:scaleType="centerCrop"
        android:layout_marginTop="40dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginLeft="10dp"
        app:lottie_rawRes="@raw/adas"
        ></com.airbnb.lottie.LottieAnimationView>
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
         android:layout_height="200dp"
android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:layout_marginTop="10dp"
        android:id="@+id/Animacion"
        app:lottie_autoPlay="true"

        app:lottie_loop="true"
        app:lottie_rawRes="@raw/welcome"
        ></com.airbnb.lottie.LottieAnimationView>
</RelativeLayout>

    <TextView
        android:id="@+id/introText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/linear"

        android:fontFamily="@font/quicksand_medium"
        android:text="@string/welcome"
        android:textColor="#000"
        android:gravity="center"
        android:textSize="19sp"
        />




    <TextView
        android:id="@+id/slogan"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/introText"
       android:layout_margin="10dp"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/welcome2"
        android:textColor="#000"
        android:textStyle="italic"
        />

    <Button
        android:id="@+id/entrar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
        android:layout_below="@+id/slogan"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"

        android:padding="5dp"
        android:background="@drawable/gradiente_main"
        android:fontFamily="@font/quicksand_bold"
        android:foreground="?attr/selectableItemBackgroundBorderless"

        android:text="@string/btn_entrar"
        android:textSize="30dp"
        android:typeface="sans"

 />


<!--

    <Button
        android:id="@+id/highScoreButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/entrar"
        android:layout_margin="40dp"
        android:background="@drawable/main_menu_button_gr"
        android:fontFamily="@font/quicksand_regular"
        android:foreground="?attr/selectableItemBackgroundBorderless"
android:onClick="openHigscore"
        android:text="HIGHSCORE"
        android:textSize="15sp"
        android:typeface="sans"


        ads:layout_constraintVertical_bias="0.0" />

    -->



    <com.scwang.wave.MultiWaveHeader
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:scaleY="-1"
        ads:mwhVelocity="5"

        android:id="@+id/wave_header2"
        android:layout_alignParentBottom="true"
        ></com.scwang.wave.MultiWaveHeader>
    <LinearLayout
        android:layout_width="match_parent"
    android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        >




        <ImageButton
            android:id="@+id/muteButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:srcCompat="@drawable/ic_volume_up_black_24dp"
            android:layout_marginTop="8dp"
            android:onClick="muteTemp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            />

        <ImageButton
            android:id="@+id/imageButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:elevation="2dp"
            android:onClick="openSettings"

            app:srcCompat="@drawable/ic_settings_black_24dp" />
    </LinearLayout>
</RelativeLayout>